# pvfmm

./: .cmake-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  MakeVariables.in  Makefile.am  README  README.md  TODO  annotated.html  blas_8h_source.html  cheb__node_8hpp.html  cheb__node_8hpp_source.html  cheb__node_8txx_source.html  cheb__utils_8cpp.html  cheb__utils_8cpp_source.html  cheb__utils_8hpp.html  cheb__utils_8hpp_source.html  cheb__utils_8txx_source.html  classes.html  classpvfmm_1_1Cheb__Node-members.html  classpvfmm_1_1Cheb__Node.html  classpvfmm_1_1Cheb__Node_1_1Function__t-members.html  classpvfmm_1_1Cheb__Node_1_1Function__t.html  classpvfmm_1_1Cheb__Node_1_1NodeData-members.html  classpvfmm_1_1Cheb__Node_1_1NodeData.html  classpvfmm_1_1FMM__Cheb-members.html  classpvfmm_1_1FMM__Cheb.html  classpvfmm_1_1FMM__Cheb_1_1FMMData-members.html  classpvfmm_1_1FMM__Cheb_1_1FMMData.html  classpvfmm_1_1FMM__Data-members.html  classpvfmm_1_1FMM__Data.html  classpvfmm_1_1FMM__Node-members.html  classpvfmm_1_1FMM__Node.html  classpvfmm_1_1FMM__Node_1_1NodeData-members.html  classpvfmm_1_1FMM__Node_1_1NodeData.html  (+199 more)
.github/workflows/: build.yml  ghpages.yml
cmake/: FindMKL.cmake  pvfmmConfig.cmake.in
doc/: .gitignore
doc/doc/: Makefile.am  bibsync.bib  doc.tex
examples/: CMakeLists.txt  Makefile
examples/include/: utils.hpp  utils.txx
examples/src/: example-c.c  example-f.f90  example-sctl.cpp  example1.cpp  example2-c.c  example2-f.f90  example2.cpp  fmm_cheb.cpp  fmm_pts.cpp  test_new_kernels.cpp
include/: blas.h  cheb_node.hpp  cheb_node.txx  cheb_utils.hpp  cheb_utils.txx  cuda_func.hpp  device_wrapper.hpp  device_wrapper.txx  dtypes.h  fft_wrapper.hpp  fmm_cheb.hpp  fmm_cheb.txx  fmm_gll.hpp  fmm_node.hpp  fmm_node.txx  fmm_pts.hpp  fmm_pts.txx  fmm_pts_gpu.hpp  fmm_tree.hpp  fmm_tree.txx  interac_list.hpp  interac_list.txx  intrin_wrapper.hpp  kernel.hpp  kernel.txx  lapack.h  legendre_rule.hpp  mat_utils.hpp  mat_utils.txx  math_utils.hpp  matrix.hpp  matrix.txx  mem_mgr.hpp  mem_mgr.txx  mem_utils.hpp  mem_utils.txx  mortonid.hpp  mortonid.txx  mpi_node.hpp  mpi_node.txx  (+22 more)
julia/: Project.toml  README.md
julia/src/: PVFMM.jl
julia/test/: reference_comparison.jl  runtests.jl
m4/: ac_check_fftw.m4  ac_check_fftwf.m4  ac_check_intel_offload.m4  ac_check_openmp.m4  ac_lang_werror.m4  ax_blas.m4  ax_check_cuda.m4  ax_check_quad_precision.m4  ax_check_svml.m4  ax_cxx_def_template_arg.m4  ax_mpi.m4
python/: README.md  example1.py  example2.py  ffi.py  notes.md  pvfmm.py  pyproject.toml
python/examples/: example1.py  example2.py
python/src/pvfmm/: __init__.py  ffi.py  wrapper.py
scripts/: .job.lonestar  .job.qsub  .job.ronaldo  .job.sbatch  .job.sge  .job.sh  .job.stampede  .job.stampede2-skx  .job.titan  .results.sh  .submit_jobs.sh  conv.sh  conv_pts.sh  single_node.sh  sscal.sh  sscal_pts.sh  test.sh  wscal.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  (+41 more)
src/: cheb_utils.cpp  cuda_func.cu  device_wrapper.cpp  device_wrapper_gpu.cu  fmm_gll.cpp  fmm_pts_gpu.cu  legendre_rule.cpp  mat_utils.cpp  math_utils.cpp  mem_mgr.cpp  mortonid.cpp  permute.cu  profile.cpp  pvfmm-wrapper.cpp  tree_node.cpp
